welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:2: error: type mismatch;
 found   : Boolean
 required: Int
 for (compteur <- 1 to estSurBiscuit) { 
                       ^